--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
   "name": "client",
+  "author": "Eric O'Brien",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1"
