--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,20 @@
 {
   "name": "api",
+  "description": "Backend that sends weather data.",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "16.x"
+  },
+  "keywords": [
+    "express",
+    "heroku"
+  ],
+  "author": "Eric O'Brien",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
     "cookie-parser": "~1.4.4",
@@ -12,6 +22,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
+    "heroku": "^7.60.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1"
